--- a/main.css
+++ b/main.css
@@ -1,14 +1,23 @@
 * {
     user-select: none;
 }
+body {
+    background-color: black;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* 세로 중앙 정렬을 위해 필요 */
+    margin: 0;
+}
 .game {
-    background-color: rgba(0, 0, 0, .2);
+    background-color: rgba(128, 128, 128, .2);
     width: 500px;
     height: 95vh;
+    padding: none;
 }
 
-.note {
+.chart {
     width: 100%;
     height: 80%;
 }
@@ -22,4 +31,42 @@
     width: 25%;
     background-color: white;
     text-align: center;
+}
+
+.pressed {
+    background-color: black;
+}
+
+.note {
+    position: absolute;
+    top: 0;
+    width: 125px;
+    height: 10px;
+    background-color: white;
+}
+
+.judgment-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 32px;
+    z-index: 10;
+    opacity: 1;
+    transition: opacity 0.5s ease-out;
+    pointer-events: none;
+}
+
+.falling {
+    animation: fall 2s linear forwards;
+}
+
+@keyframes fall {
+    from {
+        top: 20px;
+    }
+    to {
+        top: calc(100% - 60px); /* .key 높이에 맞춰 떨어지게 */
+    }
 }
